# RAGFileMcpServer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  run_mcp.sh  test_search.py  verify_mcp_data.py
notes/: ui_verification_report.md
src/: __init__.py  demo.py  server.py  streamlit_app.py
src/file_parser/: __init__.py  base.py  pdf_parser.py  text_parser.py
src/logging/: __init__.py  db_handler.py  log_manager.py  models.py
tests/: test_file_parser.py  test_logging.py  test_server.py
